--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@ body{
     </div>
 
     <a href="add.html" class="add-btn">+ Añadir ficha</a>
+    <div style="margin-top:14px">
+  <a href="listado.html" class="add-btn">📋 Ver todas las fichas</a>
+</div>
+
 
   </header>
 
@@ -307,6 +311,7 @@ body{
 
 </body>
 </html>
+
 
 
 
