--- a/add.html
+++ b/add.html
@@ -147,7 +147,7 @@ button.secondary{
 
 <body>
 
-<h1>➕ Añadir ficha · FamilyCheck</h1>
+<h1>Crear nueva ficha</h1>
 
 <div class="card">
   <label>Tipo</label>
