--- a/listado.html
+++ b/listado.html
@@ -57,11 +57,13 @@ h1{
 
 .card{
   position:relative;
+  height:180px;
+  overflow:hidden;
   border:1px solid rgba(255,255,255,.06);
   border-radius:10px;
-  padding:16px;
   cursor:pointer;
 }
+
 
 /* Fondo con portada */
 .card-bg{
