Fix background image URL fallback in listado.html

--- a/listado.html
+++ b/listado.html
@@ -249,7 +249,8 @@ async function cargarFichas(){
 
     card.innerHTML = `
   <div class="card-bg"
-       style="background-image:url('${f.cover_url || ""}')">
+       style="background-image:url('${f.cover_url || "https://image.tmdb.org/t/p/w500/8UlWHLMpgZm9bx6QYh0NFoq67TZ.jpg"}')"
+
   </div>
 
   <div class="card-content">
