--- a/listado.html
+++ b/listado.html
@@ -187,7 +187,50 @@ h1{
 .delete-btn:hover{
   color:#e07a7a;
 }
+.product-badge{
+  position:absolute;
+  top:50%;
+  right:20px;
+  transform:translateY(-50%);
+  width:120px;
+  height:120px;
+  border-radius:50%;
+  background:rgba(15,18,18,.75);
+  backdrop-filter:blur(10px);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  border:1px solid rgba(255,255,255,.08);
+  box-shadow:0 15px 40px rgba(0,0,0,.45);
+  z-index:3;
+}
 
+.product-badge .score{
+  font-size:2.4rem;
+  font-weight:800;
+  line-height:1;
+}
+
+.product-badge .label{
+  font-size:.65rem;
+  letter-spacing:2px;
+  margin-top:2px;
+  opacity:.7;
+}
+
+.product-badge .age{
+  font-size:.8rem;
+  margin-top:6px;
+  opacity:.8;
+}
+
+/* Color solo en el número */
+.score-a{ color:#7fdcc8; }
+.score-b{ color:#64b5f6; }
+.score-c{ color:#ffb74d; }
+.score-d{ color:#e57373; }
 </style>
 </head>
 
@@ -251,14 +294,20 @@ async function cargarFichas(){
 };
 
     card.className = "card";
-
+const claseScore =
+  f.fc_score >= 8 ? "score-a" :
+  f.fc_score >= 6 ? "score-b" :
+  f.fc_score >= 4 ? "score-c" :
+  "score-d";
     card.innerHTML = `
   <div class="card-bg"
        style="background-image:url('${(f.cover_url || "").trim()}')"
-
-
-  </div>
-
+ </div>
+<div class="product-badge">
+  <div class="score ${claseScore}">${f.fc_score}</div>
+  <div class="label">FC</div>
+  <div class="age">${f.edad}+</div>
+</div>
   <div class="card-content">
     <div class="card-title">${f.titulo}</div>
 
