--- a/listado.html
+++ b/listado.html
@@ -195,35 +195,37 @@ h1{
   width:120px;
   height:120px;
   border-radius:50%;
-  background:rgba(15,18,18,.75);
-  backdrop-filter:blur(10px);
+  background:rgba(15,18,18,.78);
+  backdrop-filter:blur(12px);
   display:flex;
   flex-direction:column;
   align-items:center;
   justify-content:center;
   text-align:center;
   border:1px solid rgba(255,255,255,.08);
-  box-shadow:0 15px 40px rgba(0,0,0,.45);
+  box-shadow:0 18px 45px rgba(0,0,0,.5);
   z-index:3;
 }
 
+.product-badge .label{
+  font-size:.8rem;
+  letter-spacing:2px;
+  margin-bottom:4px;
+  opacity:.85;
+  font-weight:600;
+}
+
 .product-badge .score{
-  font-size:2.4rem;
+  font-size:2.1rem; /* antes 2.4 */
   font-weight:800;
   line-height:1;
 }
 
-.product-badge .label{
-  font-size:.65rem;
-  letter-spacing:2px;
-  margin-top:2px;
-  opacity:.7;
-}
-
 .product-badge .age{
-  font-size:.8rem;
+  font-size:1rem; /* más grande */
   margin-top:6px;
-  opacity:.8;
+  opacity:.9;
+  font-weight:600;
 }
 
 /* Color solo en el número */
@@ -299,22 +301,18 @@ const claseScore =
   f.fc_score >= 6 ? "score-b" :
   f.fc_score >= 4 ? "score-c" :
   "score-d";
+    
     card.innerHTML = `
   <div class="card-bg"
        style="background-image:url('${(f.cover_url || "").trim()}')"
  </div>
 <div class="product-badge">
-  <div class="score ${claseScore}">${f.fc_score}</div>
   <div class="label">FC</div>
+  <div class="score ${claseScore}">${f.fc_score}</div>
   <div class="age">${f.edad}+</div>
 </div>
   <div class="card-content">
     <div class="card-title">${f.titulo}</div>
-
-    <div class="card-meta">
-      <div class="fc">FC ${f.fc_score}</div>
-      <div class="age">${f.edad}+</div>
-    </div>
 
     <div class="meta-extra">
       ${
