--- a/listado.html
+++ b/listado.html
@@ -187,52 +187,74 @@ h1{
 .delete-btn:hover{
   color:#e07a7a;
 }
-.product-badge{
+
+/* Contenedor vertical de los badges */
+.badge-container{
   position:absolute;
   top:50%;
   right:20px;
   transform:translateY(-50%);
-  width:120px;
-  height:120px;
+  display:flex;
+  flex-direction:column;
+  gap:14px;
+  align-items:center;
+  z-index:3;
+}
+
+/* Círculo base */
+.badge{
+  width:110px;
+  height:110px;
   border-radius:50%;
-  background:rgba(15,18,18,.78);
-  backdrop-filter:blur(12px);
+  background:rgba(15,18,18,.82);
+  backdrop-filter:blur(14px);
   display:flex;
   flex-direction:column;
   align-items:center;
   justify-content:center;
   text-align:center;
-  border:1px solid rgba(255,255,255,.08);
-  box-shadow:0 18px 45px rgba(0,0,0,.5);
-  z-index:3;
+  border:2px solid rgba(255,255,255,.15);
+  box-shadow:0 18px 45px rgba(0,0,0,.55);
+  transition:transform .25s ease;
 }
 
-.product-badge .label{
-  font-size:.8rem;
+.card:hover .badge{
+  transform:scale(1.05);
+}
+
+/* FC */
+.badge-fc .label{
+  font-size:.75rem;
   letter-spacing:2px;
-  margin-bottom:4px;
-  opacity:.85;
+  opacity:.7;
   font-weight:600;
 }
 
-.product-badge .score{
-  font-size:2.1rem; /* antes 2.4 */
+.badge-fc .score{
+  font-size:2rem;
   font-weight:800;
-  line-height:1;
-}
-
-.product-badge .age{
-  font-size:1rem; /* más grande */
   margin-top:6px;
-  opacity:.9;
-  font-weight:600;
 }
 
-/* Color solo en el número */
+/* Edad */
+.badge-age{
+  width:95px;
+  height:95px;
+  font-size:1.25rem;
+  font-weight:700;
+}
+
+/* Colores dinámicos */
+.fc-a{ border-color:#7fdcc8; }
+.fc-b{ border-color:#64b5f6; }
+.fc-c{ border-color:#ffb74d; }
+.fc-d{ border-color:#e57373; }
+
 .score-a{ color:#7fdcc8; }
 .score-b{ color:#64b5f6; }
 .score-c{ color:#ffb74d; }
 .score-d{ color:#e57373; }
+  
 </style>
 </head>
 
@@ -306,10 +328,17 @@ const claseScore =
   <div class="card-bg"
        style="background-image:url('${(f.cover_url || "").trim()}')"
  </div>
-<div class="product-badge">
-  <div class="label">FC</div>
-  <div class="score ${claseScore}">${f.fc_score}</div>
-  <div class="age">${f.edad}+</div>
+<div class="badge-container">
+
+  <div class="badge badge-fc ${claseBorde}">
+    <div class="label">FC</div>
+    <div class="score ${claseScore}">${f.fc_score}</div>
+  </div>
+
+  <div class="badge badge-age">
+    ${f.edad}+
+  </div>
+
 </div>
   <div class="card-content">
     <div class="card-title">${f.titulo}</div>
